--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -227,24 +227,24 @@
                           <td>248</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Lee</th>
+                          <th scope="row">6. Weedbesublime</th>
+                          <td>185</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Lee</th>
                           <td>149</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Bryan</th>
+                          <th scope="row">8. Meagan</th>
+                          <td>134</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. Bryan</th>
                           <td>99</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Gillian</th>
+                          <th scope="row">10. Gillian</th>
                           <td>91</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Stormy</th>
-                          <td>80</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. MJCP</th>
-                          <td>74</td>
                         </tr>
                       </tbody>
                     </table>
@@ -283,24 +283,24 @@
                           <td>120</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Bryan</th>
+                          <th scope="row">6. Weedbesublime</th>
+                          <td>68</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Meagan</th>
+                          <td>64</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Bryan</th>
                           <td>60</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Lee</th>
+                          <th scope="row">9. Lee</th>
                           <td>59</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Gillian</th>
-                          <td>51</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Stormy</th>
+                          <th scope="row">10. Gillian</th>
                           <td>46</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. MJCP</th>
-                          <td>37</td>
                         </tr>
                       </tbody>
                     </table>
