--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -207,44 +207,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Gillian</th>
+                          <th scope="row">1. Ariana</th>
+                          <td>1244</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Gillian</th>
                           <td>1142</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Lee</th>
+                          <th scope="row">3. Lee</th>
                           <td>1125</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Kota Abbott</th>
+                          <th scope="row">4. Jesus B</th>
+                          <td>1083</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Kota Abbott</th>
                           <td>663</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. JohnGraham</th>
+                          <th scope="row">6. JohnGraham</th>
                           <td>561</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Zerje Despi</th>
+                          <th scope="row">7. Zerje Despi</th>
                           <td>439</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. KOTALOHA</th>
+                          <th scope="row">8. Meagan</th>
+                          <td>418</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. KOTALOHA</th>
                           <td>336</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Ariana</th>
-                          <td>248</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. Meagan</th>
-                          <td>244</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Weedbesublime</th>
+                          <th scope="row">10. Weedbesublime</th>
                           <td>185</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Bryan</th>
-                          <td>99</td>
                         </tr>
                       </tbody>
                     </table>
@@ -276,7 +276,7 @@
                         </tr>
                         <tr>
                           <th scope="row">4. Ariana</th>
-                          <td>124</td>
+                          <td>126</td>
                         </tr>
                         <tr>
                           <th scope="row">5. KOTALOHA</th>
@@ -284,7 +284,7 @@
                         </tr>
                         <tr>
                           <th scope="row">6. Meagan</th>
-                          <td>86</td>
+                          <td>118</td>
                         </tr>
                         <tr>
                           <th scope="row">7. Gillian</th>
