--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -223,28 +223,28 @@
                           <td>1083</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Kota Abbott</th>
+                          <th scope="row">5. James</th>
+                          <td>1020</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. Kota Abbott</th>
                           <td>663</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. JohnGraham</th>
+                          <th scope="row">7. JohnGraham</th>
                           <td>561</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Zerje Despi</th>
+                          <th scope="row">8. Meagan</th>
+                          <td>488</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. Zerje Despi</th>
                           <td>439</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Meagan</th>
-                          <td>418</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. KOTALOHA</th>
+                          <th scope="row">10. KOTALOHA</th>
                           <td>336</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Weedbesublime</th>
-                          <td>185</td>
                         </tr>
                       </tbody>
                     </table>
