--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -197,7 +197,7 @@
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top 10 Scores Win Prizes</p>
-                    <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
+                    <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">UPDATED 10:00 A.M. • GAME ENDS 4:20 P.M. EST</p>
                     <table class="table">
                       <thead>
                         <tr>
@@ -208,43 +208,43 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Ariana</th>
-                          <td>1244</td>
+                          <td>1550</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Gillian</th>
+                          <th scope="row">2. Kota Abbott</th>
+                          <td>1443</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. Gillian</th>
                           <td>1142</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Lee</th>
+                          <th scope="row">4. Lee</th>
                           <td>1125</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Jesus B</th>
+                          <th scope="row">5. James</th>
+                          <td>1123</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. MJCP</th>
+                          <td>1119</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Jesus B</th>
                           <td>1083</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. James</th>
-                          <td>1020</td>
+                          <th scope="row">8. Meagan</th>
+                          <td>648</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Kota Abbott</th>
-                          <td>663</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. JohnGraham</th>
+                          <th scope="row">9. JohnGraham</th>
                           <td>561</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Meagan</th>
-                          <td>488</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Zerje Despi</th>
-                          <td>439</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. KOTALOHA</th>
-                          <td>336</td>
+                          <th scope="row">10. Derrick Graham</th>
+                          <td>454</td>
                         </tr>
                       </tbody>
                     </table>
@@ -253,7 +253,7 @@
                 <div class="tab-pane" id="pills_full_two" role="tabpanel" aria-labelledby="pills-full-two-tab">
                   <div class="container">
                     <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top Score Wins Pickle Pipe</p>
-                    <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
+                    <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">UPDATED 10:00 A.M. • GAME ENDS 4:20 P.M. EST</p>
                     <table class="table">
                       <thead>
                         <tr>
@@ -263,44 +263,44 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Kota Abbott</th>
+                          <th scope="row">1. MJCP</th>
+                          <td>541</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Kota Abbott</th>
                           <td>377</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. JohnGraham</th>
+                          <th scope="row">3. JohnGraham</th>
                           <td>360</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Zerje Despi</th>
+                          <th scope="row">4. Zerje Despi</th>
                           <td>285</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Ariana</th>
-                          <td>126</td>
+                          <th scope="row">5. Derrick Graham</th>
+                          <td>271</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. KOTALOHA</th>
+                          <th scope="row">6. Ariana</th>
+                          <td>253</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. James</th>
+                          <td>210</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Meagan</th>
+                          <td>188</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. KOTALOHA</th>
                           <td>120</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Meagan</th>
-                          <td>118</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. Gillian</th>
+                          <th scope="row">10. Gillian</th>
                           <td>77</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. Weedbesublime</th>
-                          <td>68</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Lee</th>
-                          <td>64</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Bryan</th>
-                          <td>60</td>
                         </tr>
                       </tbody>
                     </table>
