--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="row">
             <div class="col col-1">
               <img id="welcome-image" style="max-width: 560px; margin: 0 auto;" src="assets/sock-drop/welcome-compact.png">
-              <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Win Amazing Prizes!</h1>
+              <h1 id="welcome-text" class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px; font-size: 40px;">Until Next Time!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
@@ -369,15 +369,15 @@
                 </div>
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; padding: 8px 40px 0px 40px; width: 100%; display: block; max-width: 420px!important; margin: 0px auto;">
+            <!-- <blockquote class="blockquote" style="text-align: left; padding: 8px 40px 0px 40px; width: 100%; display: block; max-width: 420px!important; margin: 0px auto;">
                 <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 0px; padding: 8px 48px; height: 56px; border-radius: 48px; font-size: 20px;">Play Now</button>
                 </a>
-            </blockquote>
+            </blockquote> -->
 
 
 
-            <!-- <p id="demo" style="width: 80%;
+            <p id="demo" style="width: 80%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -388,11 +388,11 @@
             max-width: 560px;
             display: block;
             margin: 0 auto;
-            margin-top: 0px;"></p> -->
+            margin-top: 0px;"></p>
 
             <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("April 10, 2024 00:00:00").getTime();
+            var countDownDate = new Date("April 10, 2025 00:00:00").getTime();
             
             // Update the count down every 1 second
             var x = setInterval(function() {
