--- a/Cannaco-World.html
+++ b/Cannaco-World.html
@@ -219,7 +219,7 @@
             background: #7AB8F1;
         }
 
-        @media (min-width: 768px) {
+        @media (max-width: 768px) {
 
             #logo {
                 width: 48%;
