--- a/Cannaco-World.html
+++ b/Cannaco-World.html
@@ -219,11 +219,31 @@
             background: #7AB8F1;
         }
 
+        @media (max-width: 1640px) {
+
+            #logo_container {
+                padding-bottom: 18%;
+            }
+
+            #logo {
+                width: 40%;
+                padding-bottom: 18%;
+            }
+
+            [box] {
+                height: 10vw;
+            }
+        }
+
         @media (max-width: 768px) {
 
             #logo {
                 width: 64%;
-                padding-bottom: 33%;
+                padding-bottom: 29%;
+            }
+
+            [box] {
+                height: 10vw;
             }
         }
 /* 
