--- a/Cannaco-World.html
+++ b/Cannaco-World.html
@@ -237,6 +237,10 @@
 
         @media (max-width: 768px) {
 
+            #logo_container {
+                padding-bottom: 32%;
+            }
+
             #logo {
                 width: 64%;
                 padding-bottom: 29%;
