--- a/Cannaco-World.html
+++ b/Cannaco-World.html
@@ -23,10 +23,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Stylesheets -->
-    <!-- <link rel="stylesheet" href="less/common.css"> -->
-    <!-- <link rel="stylesheet" href="less/landing-fade.css"> -->
-    <!-- <link rel="stylesheet" href="less/logo-animation.css"> -->
+
+    <!--  Essential META Tags -->
+    <meta property="og:title" content="CANNACO">
+    <meta property="og:description" content="CannaCo World Logo">
+    <meta property="og:image" content="https://cannaco-labs.github.io/SockDrop/assets/images/CannaCo-World-Graphic.png">
+    <meta property="og:url" content="https://cannaco-labs.github.io/SockDrop/">
+    <meta name="twitter:card" content="summary_large_image">
+
 
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
